style: fix right align phones

--- a/public_html/css/pdf.css
+++ b/public_html/css/pdf.css
@@ -155,9 +155,8 @@ table {
     padding-right: 0;
 }
 
-#header p.userPhone {
-	margin-right: -2px !important;
-	display: block !important;
+#header table td.consultant .phones {
+	text-align: left;
 }
 
 #header table td.consultant > div p.name {
